--- a/package.json
+++ b/package.json
@@ -50,6 +50,13 @@
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "^4.11.1",
+    "**/@typescript-eslint/parser": "^4.11.1",
+    "**/jest": "^26.6.3",
+    "**/ts-jest": "^26.4.4",
+    "**/typescript": "^4.1.3"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
@@ -68,5 +75,8 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --cache-location .eslint_cache --fix"
   }
 }
