--- a/package.json
+++ b/package.json
@@ -39,15 +39,16 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^5.0.1",
     "@types/node": "^16.10.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.2",
     "install-peers-cli": "^2.2.0",
-    "semantic-release": "^18.0.0",
-    "size-limit": "^5.0.1",
+    "size-limit": "^5.0.3",
     "ts-node": "^10.2.1",
     "tsdx": "^0.14.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   },
   "resolutions": {
