ci: specified public package in package.json because npm requires this for scoped packages

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "engines": {
     "node": ">=12"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "analyze": "size-limit --why",
     "build": "tsdx build",
